[package]
name = "rustybug"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive"] }
gimli = "0.31.1"
libc = "0.2.164"
nix = { version = "0.29.0", features = ["sched", "ptrace", "signal", "personality"] }
num_cpus = "1.16.0"
object = "0.36.5"
procfs = "0.17.0"
rustc-demangle = { version = "0.1.24", features = ["std"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "chrono", "ansi", "smallvec", "tracing-log"] }

[dev-dependencies]
rusty-fork = "0.3.0"
